V5: tasks 18-20
